--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
-body {
-display: flex; justify-content: center; margin: 3em;
-}
+body { display: flex; justify-content: center; margin: 3em; }
 
 form { flex: 1; display: flex; flex-direction: column;  }
 
 label {
-  justify-content: center;
-  display: flex;
-  align-items: center;
+  flex-direction: column;
   margin: 0.6em;
   border: thin dotted black;
   padding-left: 1em;
@@ -21,7 +17,6 @@ input {
   width: 90%;
   box-sizing: border-box;
   display: block;
-  flex: 1;
 }
 input[type="text"] {
     width: 0; /* For labels not to be obfuscated . */
